--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_repositories">Repositories</string>
     <string name="text_follower">Follower</string>
+    <string name="follower_fragment">Follower Fragment</string>
+    <string name="following_fragment">Following Fragment</string>
+    <string name="tab_text_1">Follower</string>
+    <string name="tab_text_2">following</string>
+
     <style name="TagDetailNum" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -12,6 +17,7 @@
         <item name="android:maxLines">1</item>
         <item name="android:textSize">18sp</item>
     </style>
+
     <style name="TagDetail" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -19,6 +25,7 @@
         <item name="android:maxLines">1</item>
         <item name="android:textSize">12sp</item>
     </style>
+
     <style name="WH_wrap_content" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
