--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="following_fragment">Following Fragment</string>
     <string name="tab_text_1">Follower</string>
     <string name="tab_text_2">following</string>
+    <string name="user">User</string>
+    <string name="not_found">Not Found</string>
 
     <style name="TagDetailNum" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">wrap_content</item>
