--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,12 +11,15 @@
     <string name="not_found">Not Found</string>
     <string name="title_home">GithupUser</string>
     <string name="favorite">Favorite</string>
+    <string name="profile_desc_button_back">Profile_back</string>
+    <string name="setting_setting">Setting</string>
+    <string name="setting_daily_reminder">Daily Reminder</string>
+    <string name="drak_mode">Drak Mode</string>
 
     <style name="TagDetailNum" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:textColor">@color/gray_500</item>
         <item name="android:textStyle">bold</item>
         <item name="android:maxLines">1</item>
         <item name="android:textSize">18sp</item>
